--- a/user/hoidap.html
+++ b/user/hoidap.html
@@ -5,95 +5,99 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/54f0cb7e4a.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="./hoidap.css">
+	<link rel="stylesheet" href="../css/hoidap.css">
 	<link rel="stylesheet" href="./themify-icons/themify-icons.css">
     <link rel="stylesheet" href="./fontawesome-free-6.0.0-web/fontawesome-free-6.0.0-web/css/all.min.css">
 	<title>Tin mới</title>
 </head>
 <body>
-<div class="container">
-	<div class="top">
-		<img src="./pictures/banner/1200-44-1200x44-11.png" alt="">
-	</div>
-	<div class="top-down">
-		<div class="content-top-down">
-			<ul>
-				<li><a href="./index.html"><img style="width: 75px; " src="./pictures/icon/logo_1.png" alt=""></a></li>
-				<li id="address-form"><a href="#">Hà Nội<i class="fas fa-sort-down"></i></a></li>
-				<li><input type="text" placeholder="Bạn tìm gì..."><i class="fas fa-search"></i></li>
-				<li><a href=""></a><button><i class="fas fa-shopping-cart"></i>Giỏ hàng</button></li>
-				<li><a href="">Lịch sử <br>đơn hàng</a></li>
-				<li><a href="">Mua thẻ nạp ngay!</a></li>
-				<li><a href="./hoidap24h.html">24h công nghệ</a></li>
-				<li><a href="./hoidap.html">Hỏi đáp</a></li>
-				<li><a href="">Game App</a></li>
-			</ul>
+	<div class="container">
+		<div class="top">
+			<img src="../pictures/banner/1200-44-1200x44-9.png" alt="">
 		</div>
-	</div>
-<!--menu bar-->
-	<div class="menu-bar">
-		<div class="menu-bar-content">
-			<ul class="main-menu">
-				<li>
-					<a href="./iphone.html">
-						<i><img src="./pictures/icon/icon-phone-96x96-2.png"></i>
-						<span>Điện thoại<span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i><img src="./pictures/icon/icon-laptop-96x96-1.png"></i>
-						<span>Laptop<span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i><img src="./pictures/icon/icon-tablet-96x96-1.png"></i>
-						<span>Tablet<span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i><img src="./pictures/icon/icon-phu-kien-96x96-1.png"></i>
-						<span>Phụ kiện<span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i><img src="./pictures/icon/icon-smartwatch-96x96-1.png"></i>
-						<span>Smartwatch<span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i><img src="./pictures/icon/icon-avaji-96x96-1.png"></i>
-						<span>AVAJi<span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i><img src="./pictures/icon/icon-pc-96x96.png"></i>
-						<span>PC, Máy in<span>
-					</a>
-				</li>
-				<li>
-					<a href="./contact.html">
-						<span>Contact<span>
-					</a>
-				</li>
-				<li>
-					<a href="./login.html" alt="">
-						<span>Đăng nhập<span>
-					</a>
-				</li>
-				<li>
-					<a href="./dangky.html" alt="">
-						<span>Đăng ký<span>
-					</a>
-				</li>
-			</ul>
+		<div class="top-down">
+			<div class="content-top-down">
+				<ul>
+					<li><a href="../user/index.html"><img style="width: 75px; " src="../pictures/icon/logo_1.png" alt=""></a></li>
+					<li id="address-form"><a href="#">Hà Nội<i class="fas fa-sort-down"></i></a></li>
+					<li><input type="text" placeholder="Bạn tìm gì..."><i class="fas fa-search"></i></li>
+					<li><a href=""></a><button><i class="fas fa-shopping-cart"></i>Giỏ hàng</button></li>
+					<li><a href="">Lịch sử <br>đơn hàng</a></li>
+					<li><a href="">Mua thẻ nạp ngay!</a></li>
+					<li><a href="../user/hoidap24h.html">24h công nghệ</a></li>
+					<li><a href="../user/hoidap.html">Hỏi đáp</a></li>
+					<li><a href="">Game App</a></li>
+				</ul>
+			</div>
 		</div>
-	</div>
+	<!--menu bar-->
+		<div class="menu-bar">
+			<div class="menu-bar-content">
+				<ul class="main-menu">
+					<li>
+						<a href="../user/iphone.html">
+							<i><img src="../pictures/icon/icon-phone-96x96-2.png"></i>
+							<span>Điện thoại<span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i><img src="../pictures/icon/icon-laptop-96x96-1.png"></i>
+							<span>Laptop<span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i><img src="../pictures/icon/icon-tablet-96x96-1.png"></i>
+							<span>Tablet<span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i><img src="../pictures/icon/icon-phu-kien-96x96-1.png"></i>
+							<span>Phụ kiện<span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i><img src="../pictures/icon/icon-smartwatch-96x96-1.png"></i>
+							<span>Smartwatch<span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i><img src="../pictures/icon/icon-avaji-96x96-1.png"></i>
+							<span>AVAJi<span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i><img src="../pictures/icon/icon-pc-96x96.png"></i>
+							<span>PC, Máy in<span>
+						</a>
+					</li>
+					<li>
+						<a href="../user/contact.html">
+							<span>Contact<span>
+						</a>
+					</li>
+					<li>
+						<a href="../user/login.html" alt="">
+							<span>Đăng nhập<span>
+						</a>
+					</li>
+					<li>
+						<a href="../user/dangky.html" alt="">
+							<span>Đăng ký<span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+
+
+
 	<div class="text-content">
 		<h1>Năm 2022, Có Nên Chọn IPhone?</h1>
 		<p>Để sở hữu một chiếc iPhone chất lượng, người tiêu dùng thường suy tính, đắn đo trước hai lựa chọn: Chính hãng hay là xách tay. Thực tế cho thấy, việc mua theo nguồn nào cũng có nhiều điểm lợi. Tuy nhiên, vẫn còn nhiều người thắc mắc rằng liệu iPhone chính hãng với iPhone xách tay khác nhau như thế nào và có nên mua iPhone chính hãng không?</p>
@@ -162,9 +166,9 @@
 				  <h3>Quick Links</h3>
 				  <nav>
 					<ul>
-					  <li><a href="./index.html">Home</a></li>
-					  <li><a href="./iphone.html">Điện thoại</a></li>
-					  <li><a href="./hoidap24h.html">Tin tức</a></li>
+					  <li><a href="../user/index.html">Home</a></li>
+					  <li><a href="../user/iphone.html">Điện thoại</a></li>
+					  <li><a href="../user/hoidap24h.html">Tin tức</a></li>
 					</ul>
 				  </nav>
 				</div>
