--- a/user/hoidap24h.html
+++ b/user/hoidap24h.html
@@ -5,27 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/54f0cb7e4a.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="./hoidap24h.css">
+	<link rel="stylesheet" href="../css/hoidap24h.css">
 	<link rel="stylesheet" href="./themify-icons/themify-icons.css">
     <link rel="stylesheet" href="./fontawesome-free-6.0.0-web/fontawesome-free-6.0.0-web/css/all.min.css">
 	<title>Hỏi đáp</title>
 </head>
-<body>
-<div class="container">
+<body><div class="container">
 	<div class="top">
-		<img src="./pictures/banner/1200-44-1200x44-9.png" alt="">
+		<img src="../pictures/banner/1200-44-1200x44-9.png" alt="">
 	</div>
 	<div class="top-down">
 		<div class="content-top-down">
 			<ul>
-				<li><a href="./index.html"><img style="width: 75px; " src="./pictures/icon/logo_1.png" alt=""></a></li>
+				<li><a href="../user/index.html"><img style="width: 75px; " src="../pictures/icon/logo_1.png" alt=""></a></li>
 				<li id="address-form"><a href="#">Hà Nội<i class="fas fa-sort-down"></i></a></li>
 				<li><input type="text" placeholder="Bạn tìm gì..."><i class="fas fa-search"></i></li>
 				<li><a href=""></a><button><i class="fas fa-shopping-cart"></i>Giỏ hàng</button></li>
 				<li><a href="">Lịch sử <br>đơn hàng</a></li>
 				<li><a href="">Mua thẻ nạp ngay!</a></li>
-				<li><a href="./hoidap24h.html">24h công nghệ</a></li>
-				<li><a href="./hoidap.html">Hỏi đáp</a></li>
+				<li><a href="../user/hoidap24h.html">24h công nghệ</a></li>
+				<li><a href="../user/hoidap.html">Hỏi đáp</a></li>
 				<li><a href="">Game App</a></li>
 			</ul>
 		</div>
@@ -35,59 +34,59 @@
 		<div class="menu-bar-content">
 			<ul class="main-menu">
 				<li>
-					<a href="./iphone.html">
-						<i><img src="./pictures/icon/icon-phone-96x96-2.png"></i>
+					<a href="../user/iphone.html">
+						<i><img src="../pictures/icon/icon-phone-96x96-2.png"></i>
 						<span>Điện thoại<span>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<i><img src="./pictures/icon/icon-laptop-96x96-1.png"></i>
+						<i><img src="../pictures/icon/icon-laptop-96x96-1.png"></i>
 						<span>Laptop<span>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<i><img src="./pictures/icon/icon-tablet-96x96-1.png"></i>
+						<i><img src="../pictures/icon/icon-tablet-96x96-1.png"></i>
 						<span>Tablet<span>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<i><img src="./pictures/icon/icon-phu-kien-96x96-1.png"></i>
+						<i><img src="../pictures/icon/icon-phu-kien-96x96-1.png"></i>
 						<span>Phụ kiện<span>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<i><img src="./pictures/icon/icon-smartwatch-96x96-1.png"></i>
+						<i><img src="../pictures/icon/icon-smartwatch-96x96-1.png"></i>
 						<span>Smartwatch<span>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<i><img src="./pictures/icon/icon-avaji-96x96-1.png"></i>
+						<i><img src="../pictures/icon/icon-avaji-96x96-1.png"></i>
 						<span>AVAJi<span>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<i><img src="./pictures/icon/icon-pc-96x96.png"></i>
+						<i><img src="../pictures/icon/icon-pc-96x96.png"></i>
 						<span>PC, Máy in<span>
 					</a>
 				</li>
 				<li>
-					<a href="./contact.html">
+					<a href="../user/contact.html">
 						<span>Contact<span>
 					</a>
 				</li>
 				<li>
-					<a href="./login.html" alt="">
+					<a href="../user/login.html" alt="">
 						<span>Đăng nhập<span>
 					</a>
 				</li>
 				<li>
-					<a href="./dangky.html" alt="">
+					<a href="../user/dangky.html" alt="">
 						<span>Đăng ký<span>
 					</a>
 				</li>
@@ -98,7 +97,7 @@
 		<ul class="boxnews">
 			<li>
 				<a href="" title="5 mẹo dùng điện thoại Xiaomi cực kỳ hay ho, có cả nghe nhạc YouTube tắt màn hình cho bạn nào đang cần" class="img">
-					<img src="./kno/anhbia2_806x454-300x200.png">
+					<img src="../kno/anhbia2_806x454-300x200.png">
 				</a>
 				<a href="" title="5 mẹo dùng điện thoại Xiaomi cực kỳ hay ho, có cả nghe nhạc YouTube tắt màn hình cho bạn nào đang cần">
 					<h3>5 mẹo dùng điện thoại Xiaomi cực kỳ hay ho, có cả nghe nhạc YouTube tắt màn hình cho bạn nào đang cần</h3>
@@ -110,7 +109,7 @@
 			</li>
 			<li>
 				<a href="" title="Cách cập nhật iOS 15.4 Beta 1 để bạn có thể trải nghiệm mở khóa iPhone khi đeo khẩu trang, kính râm cực nhanh chóng" class="img">
-					<img src="./kno/cach-cap-nhat-ios-15-4-beta-1-22_800x450-300x200.png">
+					<img src="../kno/cach-cap-nhat-ios-15-4-beta-1-22_800x450-300x200.png">
 				</a>
 				<a href="" title="Cách cập nhật iOS 15.4 Beta 1 để bạn có thể trải nghiệm mở khóa iPhone khi đeo khẩu trang, kính râm cực nhanh chóng">
 					<h3>Cách cập nhật iOS 15.4 Beta 1 để bạn có thể trải nghiệm mở khóa iPhone khi đeo khẩu trang, kính râm cực nhanh chóng</h3>
@@ -122,7 +121,7 @@
 			</li>
 			<li>
 				<a href="" title="CPU mạnh hay nhiều RAM cũng quan trọng đấy, nhưng bạn có biết còn nhiều tiêu chí khác để lựa chọn một chiếc laptop chuẩn 2020 bền, đẹp, xài lâu hay chưa?" class="img">
-					<img src="./kno/3_800x450-300x200.jpg">
+					<img src="../kno/3_800x450-300x200.jpg">
 				</a>
 				<a href="" title="CPU mạnh hay nhiều RAM cũng quan trọng đấy, nhưng bạn có biết còn nhiều tiêu chí khác để lựa chọn một chiếc laptop chuẩn 2020 bền, đẹp, xài lâu hay chưa?">
 					<h3>CPU mạnh hay nhiều RAM cũng quan trọng đấy, nhưng bạn có biết còn nhiều tiêu chí khác để lựa chọn một chiếc laptop chuẩn 2020 bền, đẹp, xài lâu hay chưa?</h3>
@@ -134,7 +133,7 @@
 			</li>
 			<li>
 				<a href="" title="Mách bạn những tuyệt chiêu hay để chọn laptop chơi game sao cho hoàn hảo nhất, chất lượng đi cùng với mức giá phù hợp" class="img">
-					<img src="./kno/cachchonlaptopchoigame_1280x720-300x200.jpg">
+					<img src="../kno/cachchonlaptopchoigame_1280x720-300x200.jpg">
 				</a>
 				<a href="" title="Mách bạn những tuyệt chiêu hay để chọn laptop chơi game sao cho hoàn hảo nhất, chất lượng đi cùng với mức giá phù hợp">
 					<h3>Mách bạn những tuyệt chiêu hay để chọn laptop chơi game sao cho hoàn hảo nhất, chất lượng đi cùng với mức giá phù hợp</h3>
@@ -146,7 +145,7 @@
 			</li>
 			<li>
 				<a href="" title="Bật mí cho bạn 3 kinh nghiệm xài pin trên iPhone cực lâu mà không phải người dùng nào cũng biết" class="img">
-					<img src="./kno/tietkiempiniphone-_1600x900-300x200.jpg">
+					<img src="../kno/tietkiempiniphone-_1600x900-300x200.jpg">
 				</a>
 				<a href="" title="Bật mí cho bạn 3 kinh nghiệm xài pin trên iPhone cực lâu mà không phải người dùng nào cũng biết">
 					<h3>Bật mí cho bạn 3 kinh nghiệm xài pin trên iPhone cực lâu mà không phải người dùng nào cũng biết</h3>
@@ -185,9 +184,9 @@
 				  <h3>Quick Links</h3>
 				  <nav>
 					<ul>
-					  <li><a href="./index.html">Home</a></li>
-					  <li><a href="./iphone.html">Điện thoại</a></li>
-					  <li><a href="./hoidap24h.html">Tin tức</a></li>
+					  <li><a href="../user/index.html">Home</a></li>
+					  <li><a href="../user/iphone.html">Điện thoại</a></li>
+					  <li><a href="../user/hoidap24h.html">Tin tức</a></li>
 					</ul>
 				  </nav>
 				</div>
