--- a/user/iphone.html
+++ b/user/iphone.html
@@ -5,95 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/54f0cb7e4a.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="./iphone.css">
+	<link rel="stylesheet" href="../css/iphone.css">
 	<link rel="stylesheet" href="./themify-icons/themify-icons.css">
     <link rel="stylesheet" href="./fontawesome-free-6.0.0-web/fontawesome-free-6.0.0-web/css/all.min.css">
 	<title>Điện thoại</title>
 </head>
 <body>
-<div class="container">
-	<div class="top">
-		<img src="./pictures/banner/banner_1.png" alt="">
-	</div>
-	<div class="top-down">
-		<div class="content-top-down">
-			<ul>
-				<li><a href="./index.html"><img style="width: 75px; " src="./pictures/icon/logo_1.png" alt=""></a></li>
-				<li id="address-form"><a href="#">Hà Nội<i class="fas fa-sort-down"></i></a></li>
-				<li><input type="text" placeholder="Bạn tìm gì..."><i class="fas fa-search"></i></li>
-				<li><a href=""></a><button><i class="fas fa-shopping-cart"></i>Giỏ hàng</button></li>
-				<li><a href="">Lịch sử <br>đơn hàng</a></li>
-				<li><a href="">Mua thẻ nạp ngay!</a></li>
-				<li><a href="./hoidap24h.html">24h công nghệ</a></li>
-				<li><a href="./hoidap.html">Hỏi đáp</a></li>
-				<li><a href="">Game App</a></li>
-			</ul>
+	<div class="container">
+		<div class="top">
+			<img src="../pictures/banner/1200-44-1200x44-9.png" alt="">
 		</div>
-	</div>
-<!--menu bar-->
-	<div class="menu-bar">
-		<div class="menu-bar-content">
-			<ul class="main-menu">
-				<li>
-					<a href="./iphone.html">
-						<i><img src="./pictures/icon/icon-phone-96x96-2.png"></i>
-						<span>Điện thoại<span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i><img src="./pictures/icon/icon-laptop-96x96-1.png"></i>
-						<span>Laptop<span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i><img src="./pictures/icon/icon-tablet-96x96-1.png"></i>
-						<span>Tablet<span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i><img src="./pictures/icon/icon-phu-kien-96x96-1.png"></i>
-						<span>Phụ kiện<span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i><img src="./pictures/icon/icon-smartwatch-96x96-1.png"></i>
-						<span>Smartwatch<span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i><img src="./pictures/icon/icon-avaji-96x96-1.png"></i>
-						<span>AVAJi<span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<i><img src="./pictures/icon/icon-pc-96x96.png"></i>
-						<span>PC, Máy in<span>
-					</a>
-				</li>
-				<li>
-					<a href="./contact.html">
-						<span>Contact<span>
-					</a>
-				</li>
-				<li>
-					<a href="./login.html" alt="">
-						<span>Đăng nhập<span>
-					</a>
-				</li>
-				<li>
-					<a href="./dangky.html" alt="">
-						<span>Đăng ký<span>
-					</a>
-				</li>
-			</ul>
+		<div class="top-down">
+			<div class="content-top-down">
+				<ul>
+					<li><a href="../user/index.html"><img style="width: 75px; " src="../pictures/icon/logo_1.png" alt=""></a></li>
+					<li id="address-form"><a href="#">Hà Nội<i class="fas fa-sort-down"></i></a></li>
+					<li><input type="text" placeholder="Bạn tìm gì..."><i class="fas fa-search"></i></li>
+					<li><a href=""></a><button><i class="fas fa-shopping-cart"></i>Giỏ hàng</button></li>
+					<li><a href="">Lịch sử <br>đơn hàng</a></li>
+					<li><a href="">Mua thẻ nạp ngay!</a></li>
+					<li><a href="../user/hoidap24h.html">24h công nghệ</a></li>
+					<li><a href="../user/hoidap.html">Hỏi đáp</a></li>
+					<li><a href="">Game App</a></li>
+				</ul>
+			</div>
 		</div>
-	</div>
+	<!--menu bar-->
+		<div class="menu-bar">
+			<div class="menu-bar-content">
+				<ul class="main-menu">
+					<li>
+						<a href="../user/iphone.html">
+							<i><img src="../pictures/icon/icon-phone-96x96-2.png"></i>
+							<span>Điện thoại<span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i><img src="../pictures/icon/icon-laptop-96x96-1.png"></i>
+							<span>Laptop<span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i><img src="../pictures/icon/icon-tablet-96x96-1.png"></i>
+							<span>Tablet<span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i><img src="../pictures/icon/icon-phu-kien-96x96-1.png"></i>
+							<span>Phụ kiện<span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i><img src="../pictures/icon/icon-smartwatch-96x96-1.png"></i>
+							<span>Smartwatch<span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i><img src="../pictures/icon/icon-avaji-96x96-1.png"></i>
+							<span>AVAJi<span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i><img src="../pictures/icon/icon-pc-96x96.png"></i>
+							<span>PC, Máy in<span>
+						</a>
+					</li>
+					<li>
+						<a href="../user/contact.html">
+							<span>Contact<span>
+						</a>
+					</li>
+					<li>
+						<a href="../user/login.html" alt="">
+							<span>Đăng nhập<span>
+						</a>
+					</li>
+					<li>
+						<a href="../user/dangky.html" alt="">
+							<span>Đăng ký<span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+
 	<div class="app__container">
 		<div class="grid">
 			<div class="grid__row">
@@ -182,7 +184,7 @@
 						<div class="grid__row">
 							<div class="grid__column-2-4">
 								<div class="home-product-item">
-									<div class="home-product-item__img" style="background-image: url(./pictures/ip/iphone-13-pro-family-hero_2_1_1_1.png);" ></div>
+									<div class="home-product-item__img" style="background-image: url(../pictures/ip/iphone-13-pro-family-hero_2_1_1_1.png);" ></div>
 									<h4 class="home-product-item__name">iPhone 13 Pro 128GB - Xanh lá</br>Chính hãng VN/A</h4>
 									<div class="home-product-item__price">
 										<span class="home-product-item__price-old">31.990.000₫</span>
@@ -206,7 +208,7 @@
 							</div>
 							<div class="grid__column-2-4">
 								<div class="home-product-item">
-									<div class="home-product-item__img" style="background-image: url(./pictures/ip/iphone-se-midnight-select-2022031_1.jpg);" ></div>
+									<div class="home-product-item__img" style="background-image: url(../pictures/ip/iphone-se-midnight-select-2022031_1.jpg);" ></div>
 									<h4 class="home-product-item__name">iPhone SE 2022 128GB</br>Chính hãng VN/A</h4>
 									<div class="home-product-item__price">
 										<span class="home-product-item__price-old">13.990.000₫</span>
@@ -230,7 +232,7 @@
 							</div>
 							<div class="grid__column-2-4">
 								<div class="home-product-item">
-									<div class="home-product-item__img" style="background-image: url(./pictures/ip/iphone_12_pro_blue.png);" ></div>
+									<div class="home-product-item__img" style="background-image: url(../pictures/ip/iphone_12_pro_blue.png);" ></div>
 									<h4 class="home-product-item__name">iPhone 12 Pro Max 512GB</br>Chính hãng VN/A</h4>
 									<div class="home-product-item__price">
 										<span class="home-product-item__price-old">42.990.000₫</span>
@@ -254,7 +256,7 @@
 							</div>
 							<div class="grid__column-2-4">
 								<div class="home-product-item">
-									<div class="home-product-item__img" style="background-image: url(./pictures/ip/iphone-se-red-select-20220322_1_1.jpg);" ></div>
+									<div class="home-product-item__img" style="background-image: url(../pictures/ip/iphone-se-red-select-20220322_1_1.jpg);" ></div>
 									<h4 class="home-product-item__name">iPhone SE 2022 256GB</br>Chính hãng VN/A</h4>
 									<div class="home-product-item__price">
 										<span class="home-product-item__price-old">16.990.000₫</span>
@@ -278,7 +280,7 @@
 							</div>
 							<div class="grid__column-2-4">
 								<div class="home-product-item">
-									<div class="home-product-item__img" style="background-image: url(./pictures/ip/iphone_13_green_pure_back_iphone_13_green_pure_front_2-up_screen__usen_1_1.png);" ></div>
+									<div class="home-product-item__img" style="background-image: url(../pictures/ip/iphone_13_green_pure_back_iphone_13_green_pure_front_2-up_screen__usen_1_1.png);" ></div>
 									<h4 class="home-product-item__name">iPhone 13 256GB - Xanh lá</br>Chính hãng VN/A</h4>
 									<div class="home-product-item__price">
 										<span class="home-product-item__price-old">27.990.000₫</span>
@@ -302,7 +304,7 @@
 							</div>
 							<div class="grid__column-2-4">
 								<div class="home-product-item">
-									<div class="home-product-item__img" style="background-image: url(./pictures/ss/cs_galaxy-z-fold3-kv_5g__1p_cmyk_1.jpg);" ></div>
+									<div class="home-product-item__img" style="background-image: url(../pictures/ss/cs_galaxy-z-fold3-kv_5g__1p_cmyk_1.jpg);" ></div>
 									<h4 class="home-product-item__name">Samsung Galaxy Z</br>Fold3 5G 512GB</h4>
 									<div class="home-product-item__price">
 										<span class="home-product-item__price-old">44.990.000₫</span>
@@ -326,7 +328,7 @@
 							</div>
 							<div class="grid__column-2-4">
 								<div class="home-product-item">
-									<div class="home-product-item__img" style="background-image: url(./pictures/ip/iphone_11_white.png);" ></div>
+									<div class="home-product-item__img" style="background-image: url(../pictures/ip/iphone_11_white.png);" ></div>
 									<h4 class="home-product-item__name">iPhone 11 64GB</br>Chính hãng VN/A</h4>
 									<div class="home-product-item__price">
 										<span class="home-product-item__price-old">18.000.000₫</span>
@@ -350,7 +352,7 @@
 							</div>
 							<div class="grid__column-2-4">
 								<div class="home-product-item">
-									<div class="home-product-item__img" style="background-image: url(./pictures/ss/cs_9n9a0923-2.png);" ></div>
+									<div class="home-product-item__img" style="background-image: url(../pictures/ss/cs_9n9a0923-2.png);" ></div>
 									<h4 class="home-product-item__name">Galaxy Z Flip3 5G</br>Flex Your Way 2022</h4>
 									<div class="home-product-item__price">
 										<span class="home-product-item__price-old">24.990.000₫</span>
@@ -374,7 +376,7 @@
 							</div>
 							<div class="grid__column-2-4">
 								<div class="home-product-item">
-									<div class="home-product-item__img" style="background-image: url(./pictures/ip/iphone_12_mini_purple.png);" ></div>
+									<div class="home-product-item__img" style="background-image: url(../pictures/ip/iphone_12_mini_purple.png);" ></div>
 									<h4 class="home-product-item__name">iPhone 12 mini 128GB</br>Chính hãng VN/A</h4>
 									<div class="home-product-item__price">
 										<span class="home-product-item__price-old">20.990.000₫</span>
@@ -398,7 +400,7 @@
 							</div>
 							<div class="grid__column-2-4">
 								<div class="home-product-item">
-									<div class="home-product-item__img" style="background-image: url(./pictures/ip/iphone_13-_pro-5.jpg);" ></div>
+									<div class="home-product-item__img" style="background-image: url(../pictures/ip/iphone_13-_pro-5.jpg);" ></div>
 									<h4 class="home-product-item__name">iPhone 13 Pro Max 128GB</br>Chính hãng VN/A</h4>
 									<div class="home-product-item__price">
 										<span class="home-product-item__price-old">34.990.000₫</span>
@@ -441,9 +443,9 @@
 				  <h3>Quick Links</h3>
 				  <nav>
 					<ul>
-					  <li><a href="./index.html">Home</a></li>
-					  <li><a href="./iphone.html">Điện thoại</a></li>
-					  <li><a href="./hoidap24h.html">Tin tức</a></li>
+					  <li><a href="../user/index.html">Home</a></li>
+					  <li><a href="../user/iphone.html">Điện thoại</a></li>
+					  <li><a href="../user/hoidap24h.html">Tin tức</a></li>
 					</ul>
 				  </nav>
 				</div>
